--- a/app.json
+++ b/app.json
@@ -9,9 +9,9 @@
   "success_url": "https://t.me/youtubdlbot",
   "website": "https://github.com/aryanvikash/Youtube-Downloader-Bot",
   "env": {
-        "API_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
-        "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": true},
-        "BOT_TOKEN": {"description": "Get Bot Token From BotFather Bot","required": true}
+        "API_ID": {"description": "Get this value from https://my.telegram.org", "required": },
+        "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": },
+        "BOT_TOKEN": {"description": "Get Bot Token From BotFather Bot","required": 
   },
       "buildpacks": [
         {"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"},
